# covid-vacc-poll

./: Cargo.toml  README.md  example_cfg.json
src/: config.rs  error.rs  json_helper.rs  main.rs  notification.rs  service.rs
src/notification/: gotify.rs
src/service/: booked4us.rs
